--- a/templates/restaurant_app/index.html
+++ b/templates/restaurant_app/index.html
@@ -8,37 +8,45 @@
 {% block content %}
     {% if user.is_authenticated %}
         <div class="container d-flex flex-wrap m-auto justify-content-center">
-            {% for order in orders %}
-                <div class="card border-primary m-3" style="max-width: 18rem;">
-                    <div class="card-header bg-dark border-primary d-flex justify-content-between">
+            {% if orders %}
+                {% for order in orders %}
+                    <div class="card border-primary m-3" style="max-width: 18rem;">
+                        <div class="card-header bg-dark border-primary d-flex justify-content-between">
                         <span class="text-light">
                             {{ order.order_time | time }} - {% widthratio order.food.cook_time 60 1 %} мин
                         </span>
-                        <span class="text-info"><strong>{{ order.food.price | add:order.drink.price }}</strong> тг</span>
+                            <span class="text-info"><strong>{{ order.food.price | add:order.drink.price }}</strong> тг</span>
+                        </div>
+                        <div class="card-body" style="background-color: #f5f5f5">
+                            <h4 class="card-title text-info">{{ order.description }}</h4>
+                            <p>
+                                <span class="text-dark">Тағам: {{ order.food }}</span>
+                                <br>
+                                <span class="text-dark">Cусын: {{ order.drink }}</span>
+                                <br>
+                                {% if role.pk == 1 %}
+                                    <span class="text-info">Сіздің клиент: {{ order.client }}</span>
+                                {% else %}
+                                    <span class="text-info">Қызметтегі даяшы: {{ order.waiter }}</span>
+                                {% endif %}
+                            </p>
+                            <form action="{% url 'delete-order' order.id %} ">
+                                {% csrf_token %}
+                                <button class="btn btn-outline-success btn-sm container-fluid" type="submit">
+                                    Тапсырысты жабу
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="card-body" style="background-color: #f5f5f5">
-                        <h4 class="card-title text-info">{{ order.description }}</h4>
-                        <p>
-                            <span class="text-dark">Тағам: {{ order.food }}</span>
-                            <br>
-                            <span class="text-dark">Cусын: {{ order.drink }}</span>
-                            <br>
-                            {% if role.pk == 1 %}
-                                <span class="text-info">Сіздің клиент: {{ order.client }}</span>
-                            {% else %}
-                                <span class="text-info">Қызметтегі даяшы: {{ order.waiter }}</span>
-                            {% endif %}
-                        </p>
-                        <form action="{% url 'delete-order' order.id %} ">
-                            {% csrf_token %}
-                            <button class="btn btn-outline-success btn-sm container-fluid" type="submit">
-                                Тапсырысты жабу
-                            </button>
-                        </form>
-                    </div>
-                </div>
+                {% endfor %}
+            {% else %}
+                <div class="container m-5 d-flex align-items-center flex-column">
+                    <h3>Тапсырыс беру сервисіне қош келдіңіз!</h3>
+                    <p>Сіздін тапсырыстырыңық әлі жоқ!</p>
 
-            {% endfor %}
+                    <a class="mt-2" href="{% url 'make-order' %}">Бірінше тапсырысты жасау?</a>
+                </div>
+            {% endif %}
         </div>
     {% else %}
         <div class="container m-5 d-flex align-items-center flex-column">
