--- a/templates/restaurant_app/booking-list.html
+++ b/templates/restaurant_app/booking-list.html
@@ -19,7 +19,7 @@
                     <h3>Бронь беру сервисіне қош келдіңіз!</h3>
                     <p>Сіздің бронь еткен орыңдарыңыз жоқ!</p>
 
-                    <a class="mt-2" href="{% url 'add-booking' %}">Бірінше бронь жасығыңыз келедіме?</a>
+                    <a class="mt-2" href="{% url 'add-booking' %}">Бірінші бронь жасығыңыз келедіме?</a>
                 </div>
             {% endif %}
     </div>
