--- a/templates/restaurant_app/index.html
+++ b/templates/restaurant_app/index.html
@@ -44,7 +44,7 @@
                     <h3>Тапсырыс беру сервисіне қош келдіңіз!</h3>
                     <p>Сіздін тапсырыстырыңық әлі жоқ!</p>
 
-                    <a class="mt-2" href="{% url 'make-order' %}">Бірінше тапсырысты жасау?</a>
+                    <a class="mt-2" href="{% url 'make-order' %}">Бірінші тапсырысты жасау?</a>
                 </div>
             {% endif %}
         </div>
