--- a/templates/restaurant_app/get-menu.html
+++ b/templates/restaurant_app/get-menu.html
@@ -2,6 +2,7 @@
 {% block content %}
     <div class="container-fluid d-flex flex-column ">
         <div class="list-group">
+            <h3>Тағамдар</h3>
             {% for food in foods %}
                 <a href="#" class="list-group-item list-group-item-action" aria-current="true">
                     <div class="d-flex w-100 justify-content-between">
@@ -13,6 +14,7 @@
             {% endfor %}
         </div>
             <div class="list-group">
+            <h3>Сусындар</h3>
             {% for drink in drinks %}
                 <a href="#" class="list-group-item list-group-item-action" aria-current="true">
                     <div class="d-flex w-100 justify-content-between">
