--- a/templates/restaurant_app/get-menu.html
+++ b/templates/restaurant_app/get-menu.html
@@ -14,7 +14,7 @@
             {% endfor %}
         </div>
             <div class="list-group">
-            <h3>Сусындар</h3>
+            <h3 class="mt-2">Сусындар</h3>
             {% for drink in drinks %}
                 <a href="#" class="list-group-item list-group-item-action" aria-current="true">
                     <div class="d-flex w-100 justify-content-between">
