--- a/templates/restaurant_app/get-menu.html
+++ b/templates/restaurant_app/get-menu.html
@@ -1,7 +1,7 @@
 {% extends 'restaurant_app/base.html' %}
 {% block content %}
     <div class="container-fluid d-flex flex-column ">
-        <div class="list-group">
+        <div class="list-group mt-2">
             <h3>Тағамдар</h3>
             {% for food in foods %}
                 <a href="#" class="list-group-item list-group-item-action" aria-current="true">
