--- a/templates/restaurant_app/add-equip.html
+++ b/templates/restaurant_app/add-equip.html
@@ -1,10 +1,10 @@
 {% extends 'restaurant_app/forms.html' %}
 {% block form %}
     {% load static %}
-    <h3>Бронь жасау</h3>
+    <h3>Добавить аппаратур</h3>
     <form method="post">
         {% csrf_token %}
         {{ form }}
-        <button class="btn btn-outline-success mt-2" type="submit">Жүктеу</button>
+        <button class="btn btn-outline-success mt-2" type="submit">Отправить!</button>
     </form>
 {% endblock %}
