--- a/templates/restaurant_app/inc/_nav.html
+++ b/templates/restaurant_app/inc/_nav.html
@@ -1,37 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light flex align-items-center">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success flex align-items-center">
     {% load static %}
-    <a class="navbar-brand" href="{% url 'index' %}">
-        <img src="{% static 'restaurant_app/icons/favicon-32x32.png' %}" width="32" height="32" alt="icon">
-    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse  justify-content-center" id="navbarNav">
-        <ul class="navbar-nav d-flex justify-content-between">
+    <div class="collapse navbar-collapse  justify-content-center " id="navbarNav">
+        <ul class="navbar-nav d-flex justify-content-between text-white">
             <li class="nav-item mx-1">
-                <a class="nav-link" href="{% url 'index' %}">Қосымша бас парақшасы</a>
+                <a class="nav-link" href="{% url 'index' %}">Главное</a>
             </li>
             <li class="nav-item mx-1">
-                <a class="nav-link" href="{% url 'landing' %}">Сайт парақшасы</a>
+                <a class="nav-link" href="{% url 'make-order' %}">Добавить процесс</a>
             </li>
             <li class="nav-item mx-1">
-                <a class="nav-link" href="{% url 'get-menu' %}">Әс мәзірі</a>
+                <a class="nav-link" href="{% url 'get-instances' %}">Посмотреть список объектов</a>
             </li>
-            {% if role.id == 1 or role.id == 3 %}
-                <li class="nav-item mx-1">
-                    <a class="nav-link text-success font-weight-bold" href="{% url 'get-bookings' %}">Бронь</a>
-                </li>
-            {% endif %}
-            {% if role.id == 3 %}
-                <li class="nav-item mx-1">
-                    <a class="nav-link text-success font-weight-bold" href="{% url 'make-order' %}">Тапсырыс беру</a>
-                </li>
-                <li class="nav-item mx-1">
-                    <a class="nav-link text-success font-weight-bold" href="{% url 'add-booking' %}">Бронь жасау</a>
-                </li>
-            {% endif %}
+            <li class="nav-item mx-1">
+                <a class="nav-link" href="{% url 'info' %}">О сервисе</a>
+            </li>
             <li class="nav-item mx-1">
                 <a class="nav-link" target="_blank"
                    href="https://www.timeanddate.com/worldclock/kazakstan/aqtobe">
@@ -42,19 +29,21 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{ user.username }}
+                        Меню действий
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <span class="dropdown-item disabled text-info" href="#">{{ role.title }}</span>
+                        <span class="dropdown-item disabled text-info" href="#">{{ user.username }}</span>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-warning" href="{% url 'change-password' %}">Құпия сөзді өзгерту</a>
-                        <a class="dropdown-item link-danger" href="{% url 'logout' %}">Шығу</a>
-
+                        <a class="dropdown-item text-success" href="{% url 'add-part' %}">Добавить партию</a>
+                        <a class="dropdown-item text-success" href="{% url 'add-corn-type' %}">Добавить тип зерна</a>
+                        <a class="dropdown-item text-success" href="{% url 'add-equip' %}">Добавить аппарат</a>
+                        <a class="dropdown-item text-warning" href="{% url 'change-password' %}">Сменить пароль</a>
+                        <a class="dropdown-item text-danger" href="{% url 'logout' %}">Выйти</a>
                     </div>
                 </li>
             {% else %}
                 <li class="nav-item mx-1">
-                    <a class="nav-link" href="{% url 'registration' %}">Тіркелу</a>
+                    <a class="nav-link" href="{% url 'registration' %}">Зарегистрироваться</a>
                 </li>
 
             {% endif %}
