--- a/templates/restaurant_app/login.html
+++ b/templates/restaurant_app/login.html
@@ -1,11 +1,11 @@
 {% extends 'restaurant_app/forms.html' %}
 {% block form %}
-    <h3>Кіру</h3>
+    <h3>Вход</h3>
     <form method="post">
         {% csrf_token %}
         {{ form }}
-        <button class="btn btn-outline-success mt-2" type="submit">Қабылдау</button>
+        <button class="btn btn-outline-success mt-2" type="submit">Отправить</button>
     </form>
-    <a class="mt-2" href="{% url 'registration' %}">Тіркелгіңіз келеді ме?</a>
+    <a class="mt-2" href="{% url 'registration' %}">Хотите зарегистрироваться?</a>
 
 {% endblock %}
