--- a/templates/restaurant_app/get-instances.html
+++ b/templates/restaurant_app/get-instances.html
@@ -4,7 +4,7 @@
 
 {% block title %} {{ title }} {% endblock %}
 {% block content %}
-    <div class="container m-5 p-5">
+    <div class="container mx-5 p-5">
         <div class="container my-4">
             <h5>Список типов зерна:</h5>
             {% if corn_types %}
